ingress/ingressDemo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aks-helloworld-one
  namespace: ingress-basic  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aks-helloworld-one
  template:
    metadata:
      labels:
        app: aks-helloworld-one
    spec:
      containers:
      - name: aks-helloworld-one
        image: mcr.microsoft.com/azuredocs/aks-helloworld:v1
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "100m"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yeasy
  namespace: ingress-basic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: yeasy
  template:
    metadata:
      labels:
        app: yeasy
    spec:
      containers:
      - name: yeasy
        image: yeasy/simple-web
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "100m"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flaskapp
  namespace: ingress-basic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flaskapp
  template:
    metadata:
      labels:
        app: flaskapp
    spec:
      containers:
      - name: flaskapp
        image: jcdemo/flaskapp
        ports:
        - containerPort: 5000
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: aks-helloworld-one  
  namespace: ingress-basic
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: aks-helloworld-one
---
apiVersion: v1
kind: Service
metadata:
  name: yeasy
  namespace: ingress-basic
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: yeasy
---
apiVersion: v1
kind: Service
metadata:
  name: flaskapp
  namespace: ingress-basic
spec:
  ports:
  - port: 5000
    protocol: TCP
  type: ClusterIP
  selector:
    app: flaskapp
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hello-world-ingress
  namespace: ingress-basic
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: yeasy
          servicePort: 80
        path: /yeasy
      - backend:
          serviceName: flaskapp
          servicePort: 5000
        path: /flaskapp
      # default route
      - backend:
          serviceName: aks-helloworld-one
          servicePort: 80
        path: /
